--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set MMS version variable
         id: mms_version
@@ -81,12 +81,7 @@ jobs:
           echo "Latest tag: ${VERSION}"
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
 
-      - name: Create a new release on GitHub
-        uses: ghcli/release-create@v1.0.0
+      - name: GH Release
+        uses: softprops/action-gh-release@v2.2.0
         with:
-          tag_name: "${{ env.VERSION }}"
-          release_name: "Release ${{ env.VERSION }}"
-          body: "Automated release package"
           files: "package.zip"
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
