--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  download_and_extract:
+  build_and_upload_package:
     runs-on: ubuntu-latest
 
     steps:
@@ -74,6 +74,7 @@ jobs:
           zip -r package.zip server_files/
 
       - name: Get next tag
+        id: get_next_tag
         run: |
           LAST_TAG=${{ steps.previoustag.outputs.tag }}
           NEXT_NUMBER=$((LAST_TAG % 100))
@@ -83,6 +84,9 @@ jobs:
           else
             NEXT_TAG=$((LAST_TAG + 1))
           fi
+
+          echo "NEXT_TAG=${NEXT_TAG}" >> $GITHUB_ENV
+          echo "::set-output name=NEXT_TAG::${NEXT_TAG}"
 
       - name: GH Release
         uses: softprops/action-gh-release@v2.2.0
