--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -73,6 +73,12 @@ jobs:
           cd $GITHUB_WORKSPACE
           tar -czf package.tar.gz server_files/
 
+      - name: 'Get Previous tag'
+        id: previoustag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+        with:
+          fallback: 1
+
       - name: Get next tag
         id: get_next_tag
         run: |
