--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -84,19 +84,13 @@ jobs:
         run: |
           LAST_TAG=${{ steps.previoustag.outputs.tag }}
           NEXT_NUMBER=$((LAST_TAG % 100))
-
-          if [ $NEXT_NUMBER -eq 1 ]; then
-            NEXT_TAG=$LAST_TAG
-          else
-            NEXT_TAG=$((LAST_TAG + 1))
-          fi
+          NEXT_TAG=$((LAST_TAG + 1))
 
           echo "NEXT_TAG=${NEXT_TAG}" >> $GITHUB_ENV
-          echo "::set-output name=NEXT_TAG::${NEXT_TAG}"
 
       - name: GH Release
         uses: softprops/action-gh-release@v2.1.0
         with:
           files: "package.tar.gz"
           token: ${{ secrets.TOKEN }}
-          tag_name: "v${{steps.get_next_tag.outputs.NEXT_TAG}}"
+          tag_name: "v${{env.NEXT_TAG}}"
