--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Tar the server_files directory
         run: |
           cd $GITHUB_WORKSPACE
-          tar xvf package.tar.gz server_files/
+          tar -cvf package.tar.gz server_files/
 
       - name: Get previous tag
         id: previoustag
