--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -73,18 +73,19 @@ jobs:
           cd $GITHUB_WORKSPACE/server_files
           tar -czvf package.tar.gz ./*
 
-      - name: 'Get Previous tag'
-        id: previoustag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+
+      - name: Get tag
+        id: tag
+        uses: devops-actions/action-get-tag@v1.0.3
         with:
-          prefix: "v"
-          fallback: 1.0.0
+          strip_v: true
+          default: v1.0.0
 
       - name: 'Get next minor version'
         id: semvers
         uses: "WyriHaximus/github-action-next-semvers@v1"
         with:
-          version: ${{ steps.previoustag.outputs.tag }}
+          version: ${{ steps.tag.outputs.tag }}
 
       - name: GH Release
         uses: softprops/action-gh-release@v2.1.0
