--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -73,7 +73,7 @@ jobs:
           echo "Downloading acmrs.sh"
           cd $GITHUB_WORKSPACE/server_files/game/
           curl -L -O https://raw.githubusercontent.com/ghostcap-gaming/ACMRS-cs2-metamod-update-fix/refs/heads/main/acmrs.sh
-          sed -i 's|/home/container/game/csgo|/home/steam/cs2-dedicated/game/csgo|'
+          sed -i 's|/home/container/game/csgo|/home/steam/cs2-dedicated/game/csgo|' acmrs.sh
           chmod +x acmrs.sh
 
       - name: Tar the server_files directory
