--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Tar the server_files directory
         run: |
           cd $GITHUB_WORKSPACE/server_files
-          tar -czvf package.tar.gz ./*
+          tar cvzf package.tar.gz ./*
 
       - name: Get tag
         id: tag
