fix docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - CS2_LAN=0                    # (0 - LAN mode disabled, 1 - LAN Mode enabled)
       - CS2_MAXPLAYERS=24            # (Max players)
       - CS2_PW                       # (CS2 server password)
-      - CS2_CFG_URL="https://github.com/Bims-sh/cs2-dm/releases/latest/download/package.tar.gz"
+      - CS2_CFG_URL=https://github.com/Bims-sh/cs2-dm/releases/latest/download/package.tar.gz
       # Game modes
       - CS2_GAMEALIAS=custom        # (Game type, e.g. casual, competitive, deathmatch. See https://developer.valvesoftware.com/wiki/Counter-Strike_2/Dedicated_Servers)
       - CS2_GAMETYPE=1              # (Used if CS2_GAMEALIAS not defined. See https://developer.valvesoftware.com/wiki/Counter-Strike_2/Dedicated_Servers)
