fix package file

--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -103,6 +103,6 @@ jobs:
       - name: GH Release
         uses: softprops/action-gh-release@v2.1.0
         with:
-          files: "server_files/package.tar.gz"
+          files: "package_files/package.tar.gz"
           token: ${{ secrets.TOKEN }}
           tag_name: "${{ env.TAG }}"
