--- a/server_files/game/csgo/cfg/deathmatch.cfg
+++ b/server_files/game/csgo/cfg/deathmatch.cfg
@@ -4,3 +4,5 @@ css_gamemode "Deathmatch"
 
 exec deathmatch_settings.cfg
 exec_after_map_start "exec deathmatch_settings.cfg"
+
+echo "deathmatch.cfg executed"
