--- a/server_files/game/csgo/cfg/deathmatch_settings.cfg
+++ b/server_files/game/csgo/cfg/deathmatch_settings.cfg
@@ -39,10 +39,12 @@ mp_roundtime 10
 mp_respawn_immunitytime 10
 
 // Bots
-exec bots.cfg
+exec settings/bots.cfg
 
 exec_after_delay 20 "say Use !gun !dm command in all chat"
 
 exec custom_deathmatch.cfg
 
 sv_cheats 0
+
+echo "deathmatch_settings.cfg executed"
