--- a/server_files/game/csgo/cfg/settings/alltalk_off.cfg
+++ b/server_files/game/csgo/cfg/settings/alltalk_off.cfg
@@ -8,4 +8,6 @@ sv_spec_hear 0
 sv_voiceenable 0
 tv_relayvoice 0
 
-exec_after_round_start "exec settings/alltalk_off.cfg" 
+exec_after_round_start "exec settings/alltalk_off.cfg"
+
+echo "alltalk_off.cfg executed"
