--- a/server_files/game/csgo/cfg/settings/no_drop_weapons.cfg
+++ b/server_files/game/csgo/cfg/settings/no_drop_weapons.cfg
@@ -5,3 +5,5 @@ mp_death_drop_gun 0
 mp_drop_knife_enable 0
 mp_weapons_allow_map_placed 0
 mp_disconnect_kills_players 1
+
+echo "no_drop_weapons.cfg executed"
