--- a/server_files/game/csgo/cfg/deathmatch_settings.cfg
+++ b/server_files/game/csgo/cfg/deathmatch_settings.cfg
@@ -38,6 +38,8 @@ mp_timelimit 10
 mp_roundtime 10
 mp_respawn_immunitytime 10
 
+sv_disable_teamselect_menu 1
+sv_human_autojoin_team 1
 mp_humanteam "T"
 
 // Bots
