meant t in the last commit xd

--- a/server_files/game/csgo/cfg/deathmatch_settings.cfg
+++ b/server_files/game/csgo/cfg/deathmatch_settings.cfg
@@ -40,6 +40,7 @@ mp_respawn_immunitytime 10
 
 sv_disable_teamselect_menu 0
 sv_human_autojoin_team 2
+mp_humanteam "T"
 
 // Bots
 exec settings/bots.cfg
