--- a/server_files/game/csgo/cfg/settings/bots.cfg
+++ b/server_files/game/csgo/cfg/settings/bots.cfg
@@ -25,4 +25,6 @@ bot_dont_shoot 0
 bot_pistols_only 0
 bot_snipers_only 0
 
+exec_after_round_start "exec settings/bots.cfg"
+
 echo "bots.cfg executed"
