--- a/server_files/game/csgo/cfg/deathmatch_settings.cfg
+++ b/server_files/game/csgo/cfg/deathmatch_settings.cfg
@@ -42,6 +42,13 @@ sv_disable_teamselect_menu 0
 sv_human_autojoin_team 2
 mp_humanteam "T"
 
+mp_ct_default_melee weapon_knife
+mp_ct_default_secondary weapon_deagle
+mp_ct_default_primary "weapon_ak47"
+mp_t_default_melee weapon_knife
+mp_t_default_secondary weapon_deagle
+mp_t_default_primary "weapon_ak47"
+
 // Bots
 exec settings/bots.cfg
 
