--- a/server_files/game/csgo/cfg/deathmatch.cfg
+++ b/server_files/game/csgo/cfg/deathmatch.cfg
@@ -5,4 +5,6 @@ css_gamemode "Deathmatch"
 exec deathmatch_settings.cfg
 exec_after_map_start "exec deathmatch_settings.cfg"
 
+exec_after_delay "20" "exec deathmatch_settings.cfg"
+
 echo "deathmatch.cfg executed"
