--- a/server_files/game/csgo/cfg/deathmatch_settings.cfg
+++ b/server_files/game/csgo/cfg/deathmatch_settings.cfg
@@ -39,7 +39,7 @@ mp_roundtime 10
 mp_respawn_immunitytime 10
 
 sv_disable_teamselect_menu 1
-sv_human_autojoin_team 2
+mp_force_assign_teams 1
 
 mp_ct_default_melee weapon_knife
 mp_ct_default_secondary weapon_deagle
