--- a/server_files/game/csgo/cfg/deathmatch/deathmatch.cfg
+++ b/server_files/game/csgo/cfg/deathmatch/deathmatch.cfg
@@ -1,6 +1,11 @@
 // Things you can customize and add your own cvars
-exec deathmatch.cfg
 sv_cheats 1
+bot_allow_grenades 1
+bot_allow_shotguns 1
+bot_allow_pistols 1
+bot_allow_rifles 1
+bot_allow_snipers 1
+bot_allow_machine_guns 1
 
 //Do not change or delete!!
 mp_max_armor 0
