--- a/server_files/game/csgo/cfg/settings/bots.cfg
+++ b/server_files/game/csgo/cfg/settings/bots.cfg
@@ -3,10 +3,14 @@ bot_join_after_player 1
 bot_join_team any
 bot_quota 10
 bot_quota_mode "fill"
-bot_difficulty 3
-custom_bot_difficulty 3
+bot_difficulty 4
+custom_bot_difficulty 4
+bot_allow_grenades 1
+bot_allow_shotguns 1
 bot_allow_pistols 1
 bot_allow_rifles 1
+bot_allow_snipers 1
+bot_allow_machine_guns 1
 sv_auto_adjust_bot_difficulty 1
 bot_max_vision_distance_override -1
 bot_autodifficulty_threshold_high 0
