--- a/server_files/game/csgo/cfg/deathmatch/deathmatch.cfg
+++ b/server_files/game/csgo/cfg/deathmatch/deathmatch.cfg
@@ -6,6 +6,7 @@ bot_allow_pistols 1
 bot_allow_rifles 1
 bot_allow_snipers 1
 bot_allow_machine_guns 1
+mp_buy_anywhere 1
 
 //Do not change or delete!!
 mp_max_armor 0
