--- a/server_files/game/csgo/cfg/deathmatch_settings.cfg
+++ b/server_files/game/csgo/cfg/deathmatch_settings.cfg
@@ -29,7 +29,7 @@ mp_drop_grenade_enable 0
 mp_death_drop_c4 0
 mp_death_drop_taser 0
 mp_defuser_allocation 0
-mp_solid_teammates 0
+mp_solid_teammates 1
 mp_weapons_allow_typecount -1
 mp_hostages_max 0
 
@@ -40,14 +40,7 @@ mp_respawn_immunitytime 10
 sv_disable_teamselect_menu 1
 mp_force_assign_teams 1
 
-mp_ct_default_melee weapon_knife
-mp_ct_default_secondary weapon_deagle
-mp_ct_default_primary "weapon_ak47"
-mp_t_default_melee weapon_knife
-mp_t_default_secondary weapon_deagle
-mp_t_default_primary "weapon_ak47"
-
-exec custom_deathmatch.cfg
+mp_bot_ai_bt "scripts/ai/deathmatch/bt_default.kv3"
 
 sv_cheats 0
 
