--- a/server_files/game/csgo/cfg/deathmatch_settings.cfg
+++ b/server_files/game/csgo/cfg/deathmatch_settings.cfg
@@ -33,6 +33,14 @@ mp_solid_teammates 1
 mp_weapons_allow_typecount -1
 mp_hostages_max 0
 
+exec "deathmatch/deathmatch.cfg"
+bot_allow_grenades
+bot_allow_shotguns
+bot_allow_pistols
+bot_allow_rifles
+bot_allow_snipers
+bot_allow_machine_guns
+
 mp_timelimit 10
 mp_roundtime 10
 mp_respawn_immunitytime 10
