--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - CS2_MAXPLAYERS=32            # (Max players)
       - CS2_PW                       # (CS2 server password)
       - CS2_CFG_URL=https://github.com/Bims-sh/cs2-dm/releases/latest/download/package.tar.gz
-      - CS2_ADDITIONAL_ARGS=+exec deathmatch.cfg +bot_allow_grenades 1 +bot_allow_shotguns 1 +bot_allow_pistols 1 +bot_allow_rifles 1 +bot_allow_snipers 1 +bot_allow_machine_guns 1 +mp_buy_anywhere 1
+      - CS2_ADDITIONAL_ARGS=+exec deathmatch.cfg
       # Game modes
       - CS2_GAMEALIAS=deathmatch     # (Game type, e.g. casual, competitive, deathmatch. See https://developer.valvesoftware.com/wiki/Counter-Strike_2/Dedicated_Servers)
       - CS2_GAMETYPE=0               # (Used if CS2_GAMEALIAS not defined. See https://developer.valvesoftware.com/wiki/Counter-Strike_2/Dedicated_Servers)
